--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,5 +34,5 @@
     {{ site.data.locales[include.lang].meta | replace: ':PLATFORM', _platform | replace: ':THEME', _theme }}
   </p>
 <script async src="https://busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-<span id="busuanzi_container_site_pv">本站总访问量<span id="busuanzi_value_site_uv"></span>次</span>
+<span id="busuanzi_container_site_pv">Total visits: <span id="busuanzi_value_site_pv"></span></span>
 </footer>
