--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -48,11 +48,11 @@
     </ul>
   </nav>
 
-  <!-- View counts -->
+  <!-- View counter -->
   <div class="align-items-center w-100" style="text-align: center; margin-bottom: 1rem;">
-    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftungsten106.github.io&count_bg=%23EDCE58&title_bg=%23E35959&icon=mcdonalds.svg&icon_color=%23DFB017&title=hits&edge_flat=false"/>
+    <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftungsten106.github.io&count_bg=%23EDCE58&title_bg=%23E35959&icon=mcdonalds.svg&icon_color=%23DFB017&title=hits&edge_flat=false" alt="hit counter"/>
   </div>
-  
+
   <div class="sidebar-bottom d-flex flex-wrap  align-items-center w-100">
     {% unless site.theme_mode %}
       <button type="button" class="mode-toggle btn" aria-label="Switch Mode">
