add view count to post.html

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,6 +78,19 @@ tail_includes:
     <!-- .post-meta -->
   </header>
 
+  <br><br>
+  <!-- View counts -->
+  {% capture url %} https://{{ site.url | remove_first: 'https://' | remove_first: 'http://' }}{{ page.url }}
+  {% endcapture %}
+  {% capture view_img_url %}
+  https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Ftungsten106.github.io&count_bg=%23EDCE58&title_bg=%23E35959&icon=mcdonalds.svg&icon_color=%23DFB017&title=hits&edge_flat=false
+  {% endcapture %}
+  {% assign view_img_url = view_img_url | remove: " " %}
+
+  <div class="align-items-left w-100" style="text-align: left; margin-bottom: 1rem;">
+    <img src="{{view_img_url}}" />
+  </div>
+
   <div class="content">
     {{ content }}
   </div>
