--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -88,7 +88,7 @@ tail_includes:
   {% assign view_img_url = view_img_url | remove: " " %}
 
   <div class="align-items-left w-100" style="text-align: left; margin-bottom: 1rem;">
-    <img src="{{view_img_url}}" />
+    <img src="{{view_img_url}}" alt="view count"/>
   </div>
 
   <div class="content">
